[gd_scene load_steps=7 format=3 uid="uid://bh1b3oo8hjmnm"]

[ext_resource type="Script" uid="uid://codankyt5prf" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="PackedScene" uid="uid://tatyyqv1albv" path="res://scenes/volume_slider.tscn" id="1_n87rw"]
[ext_resource type="Shader" uid="uid://cg87i8e273wdk" path="res://scripts/pause_menu.gdshader" id="2_kukqi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5d2l8"]
shader = ExtResource("2_kukqi")
shader_parameter/lod = 0.5

[sub_resource type="Animation" id="Animation_kukqi"]
resource_name = "blur_animation"
length = 0.3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5d2l8"]
_data = {
&"blur_animation": SubResource("Animation_kukqi")
}

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5d2l8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveGame" type="Button" parent="."]
layout_mode = 0
offset_left = 768.0
offset_top = 64.0
offset_right = 1151.0
offset_bottom = 192.0
text = "Save"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 256.0
offset_right = 1151.0
offset_bottom = 384.0
text = "Quit"

[node name="Resume" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 448.0
offset_right = 1151.0
offset_bottom = 576.0
text = "Resume"

[node name="sfx" parent="." instance=ExtResource("1_n87rw")]
layout_mode = 0
offset_left = 64.0
offset_top = 624.0
offset_right = 384.0
offset_bottom = 640.0
bus_name = "sfx"

[node name="sfxLabel" type="Label" parent="sfx"]
layout_mode = 0
offset_top = -23.0
offset_right = 320.0
text = "Sound Effects Volume"
horizontal_alignment = 1

[node name="music" parent="." instance=ExtResource("1_n87rw")]
layout_mode = 0
offset_left = 416.0
offset_top = 624.0
offset_right = 736.0
offset_bottom = 640.0
bus_name = "sfx"

[node name="musicLabel" type="Label" parent="music"]
layout_mode = 0
offset_top = -23.0
offset_right = 320.0
text = "Music Volume"
horizontal_alignment = 1

[node name="Master" parent="." instance=ExtResource("1_n87rw")]
layout_mode = 0
offset_left = 768.0
offset_top = 624.0
offset_right = 1088.0
offset_bottom = 640.0
bus_name = "Master"

[node name="MasterLabel" type="Label" parent="Master"]
layout_mode = 0
offset_top = -23.0
offset_right = 320.0
text = "Master Volume"
horizontal_alignment = 1

[node name="play_blur" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5d2l8")
}

[connection signal="button_down" from="SaveGame" to="." method="_on_save_game_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Resume" to="." method="_on_resume_button_down"]
